[gd_scene load_steps=7 format=3 uid="uid://ckp5wws6byby3"]

[ext_resource type="PackedScene" uid="uid://dy74uem5hkkcd" path="res://EntityBase.tscn" id="1_e5h7s"]
[ext_resource type="Texture2D" uid="uid://c23t2d3s3110h" path="res://Weapons/DDD/assets/fist.png" id="2_a0gf1"]
[ext_resource type="Script" uid="uid://bic7v2e3y2syd" path="res://Weapons/DDD/ddd_projectile.gd" id="2_b36sw"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_b36sw"]
friction = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_p06n5"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b36sw"]
radius = 8.0

[node name="DDDProjectile" instance=ExtResource("1_e5h7s")]
collision_layer = 64
collision_mask = 112
physics_material_override = SubResource("PhysicsMaterial_b36sw")
script = ExtResource("2_b36sw")

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource("CircleShape2D_p06n5")

[node name="Sprite2D" parent="." index="1"]
texture = ExtResource("2_a0gf1")

[node name="EnemyCollider" type="Area2D" parent="." index="2"]
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyCollider" index="0"]
shape = SubResource("CircleShape2D_b36sw")

[node name="LifeTimer" type="Timer" parent="." index="3"]
wait_time = 0.2
one_shot = true
autostart = true

[connection signal="body_entered" from="EnemyCollider" to="." method="_on_enemy_collider_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
